# Nu-e-dynamique-en-classification-automatique-et-reconnaissance-des-formes

./: README.md  pyproject.toml  requirements.txt  structure.txt
nuees/: __init__.py  distances.py  nuees.py  r_function.py
streamlit_app/: app.py
tests/: test_basic.py
tools/: generate_datasets.py
