[project]
name = "nuees"
version = "1.0.0"
description = "Implémentation de la méthode des Nuées Dynamiques"
authors = [
    { name = "Judicaël Makwiza", email = "judicaelmakwiza67@gmail.com" }
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "streamlit"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
